--- a/src/App.css
+++ b/src/App.css
@@ -1224,6 +1224,10 @@
     overflow-x: hidden;
   }
 
+  .tabs {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .chart-wrapper .recharts-legend-wrapper {
     width: 100% !important;
     left: 0 !important;
